
2019-10-19  Ron Norman <rjn@inglenet.com>
	* fileio.c has been split into fileio.c fisam.c fbdb.c fextfh.c focextfh.c
	* fileio.h added with common definitions for all fileio modules
	* flmdb.c copied from isam-lmdb branch
	* You can now configure multiple INDEXED file handlers but only one of
	  C-ISAM, D-ISAM or VB-ISAM

2019-10-03  Ron Norman <rjn@inglenet.com>

	* fileio.c: Removed definition of off_t as it needs to be defined
	           by the system and is most often in <sys/types.h>

2019-10-01  Edward Hart <edward.dan.hart@gmail.com>

	* fileio.c: fixed location of definition of off_t (bug #596)

2019-09-28  Ron Norman <rjn@inglenet.com>

	* common.h: COB_FILE_VERSION changed to 4 (matching reportwriter)

2019-09-26  Ron Norman <rjn@inglenet.com>

	* sysdefines.h: New header to keep system dependent #defines
	* common.c,common.h,call.c,fileio.c: Uses sysdefines.h
	* Makefile.am: added sysdefines.h

2019-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: moved alignment defines to cobc/cobc.h

2019-09-20  Ron Norman <rjn@inglenet.com>

	* reportio.c: Table up report for cleanup in cob_exit_reportio

2019-09-10  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fix relative_read_size to use 'size_t' for GC file type

2019-09-03  Ron Norman <rjn@inglenet.com>

	* call.c: Initialize valid_char when needed
	* numeric.c: Correct the definition of 'isinf'

2019-08-28  Ron Norman <rjn@inglenet.com>

	* fileio.c: Free up 'fcd' fnamePtr allocated

2019-08-27  Ron Norman <rjn@inglenet.com>

	* fileio.c: Clean up 'fcd' tables dynamically allocated via free_extfh_fcd
	            fix some compile warnings

2019-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* call.c (cob_resolve_internal): refactored to keep call_entry_buff
	  and call_entry_buff2 as a local variables instead of dynamic
	  storage check + allocating + deallocating
	* common.h, call.c (cob_encode_program_id): extracted from
	  cob_resolve_internal and added explicit check for the buffer