@@ -1,5 +1,10 @@
 
 2019-10-19  Ron Norman <rjn@inglenet.com>
+	* fisam.c correction for START LESS EQUAL followed by READ PREVIOUS
+	* fbdb.c,flmdb.c correction to not return 05 status when OPEN OUTPUT
+	   for an optional file
+
+2019-10-19  Ron Norman <rjn@inglenet.com>
 	* fileio.c has been split into fileio.c fisam.c fbdb.c fextfh.c focextfh.c
 	* fileio.h added with common definitions for all fileio modules
 	* flmdb.c copied from isam-lmdb branch
